--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -20,7 +20,6 @@ body {
     -moz-border-radius: 75px;
     -khtml-border-radius: 75px;
     -webkit-border-radius: 75px;
-    
 }
 
 .instructions {
@@ -29,6 +28,17 @@ body {
     font-weight: 600;
     font-size: 18px;
     width: 50%;
+}
+
+.instructions a {
+    font-weight: 600;
+    font-family: inherit;
+    color: black;
+    text-decoration: none;
+}
+
+.instructions a:hover {
+    color: gray;
 }
 
 .username {
@@ -60,6 +70,13 @@ body {
 .subscribe:hover {
     background: #4d4d4d;
     color: #FFFC00;
+}
+
+#response-message {
+    font-size: 19px;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    color: #000000;
+    margin: 15px;
 }
 
 /* footer bullshit */
