just kidding, that should do it

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -1,8 +1,16 @@
 {% extends "base.html" %}
 {% block body %}
+    <div class="faq">
+        <p><strong>Q:</strong> I JUST SUBSCRIBED, WHEN AM I GOING TO GET A CAT PICTURE?</p>
+        <p><strong>A:</strong> SOMETIME IN THE NEXT 24 HOURS</p>
+        <br>
+        <p><strong>Q:</strong> CAN YOU STOP SENDING ME SNAPCATS?</p>
+        <p><strong>A:</strong> SURE, UNSUBSCRIBE <a href="unsubscribe">HERE</a></p>
+        <hr>
+    </div>
     <div class="instructions">
-    <p>CREATED BY <a href="http://yoavz.com">YOAVZ</a>
-    <p>SPECIAL THANKS TO <a href="http://snapchat.com">SNAPCHAT</a> AND <a href="http://gibsonsec.org/snapchat/fulldisclosure/">GIBSONSEC</a>
+        <p>CREATED BY <a href="http://yoavz.com">YOAVZ</a>
+        <p>THANKS TO <a href="http://snapchat.com">SNAPCHAT</a> AND <a href="http://gibsonsec.org/snapchat/fulldisclosure/">GIBSONSEC</a>
     </div>
 {% endblock %}
 
