--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -41,6 +41,30 @@ body {
     color: gray;
 }
 
+.faq {
+    margin: 15px auto;
+    font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    text-align: left;
+    width: 50%;
+}
+
+.faq hr {
+    border-color: black;
+}
+
+.faq a {
+    font-weight: 600;
+    font-family: inherit;
+    color: black;
+    text-decoration: none;
+}
+
+.faq a:hover {
+    color: gray;
+}
+
 .username {
     margin: 0 auto;
     width: 50%;
